Firefox fix: hide only horizontal scrollbars

--- a/musr_project/static/styles/style.css
+++ b/musr_project/static/styles/style.css
@@ -121,7 +121,7 @@ li.active {
 @-moz-document url-prefix() {
   body,
   .horizontal {
-    overflow: hidden !important;
+    overflow-x: hidden !important;
   }
 }
 
